Fixed the expand/collapse toggles

--- a/src/styles/content-sections.sass
+++ b/src/styles/content-sections.sass
@@ -131,7 +131,7 @@
         .logo-container
           .wide-logo
             max-width: 150px
-            border: 1px dashed red
+            //border: 1px dashed red
 
 @media (min-width: 490px)
   .experience-section
@@ -140,7 +140,7 @@
         .logo-container
           .wide-logo
             max-width: 190px
-            border: 1px solid red
+            //border: 1px solid red
 
 @media (min-width: 600px)
   .experience-section
@@ -445,15 +445,18 @@
 .expand-collapse-with-icon
   display: inline-flex
   align-items: center
-  min-width: 125px
+  .text
+    white-space: nowrap
+  .svg-as-text
+    margin: 0 0 0 0.45em
+    // Set svg color to match text color, which is #0647b6 here
+    // SVG color conversion tool: https://codepen.io/sosuke/pen/Pjoqqp
+    //  -> Prefix with _brightness(0) saturate(100%)_ to ensure all SVGs start completely black.
+    filter: brightness(0) saturate(100%) invert(13%) sepia(82%) saturate(4645%) hue-rotate(215deg) brightness(92%) contrast(95%)
 
 .svg-as-text  // For icons which appear as text elements
-  font-size: 0.80em
-  margin: 0 0.25em
-  // Set svg color to match text color, which is #171717 here
-  // SVG color conversion tool: https://codepen.io/sosuke/pen/Pjoqqp
-  //  -> Prefix with _brightness(0) saturate(100%)_ to ensure all SVGs start completely black.
-  filter: brightness(0) saturate(100%) invert(0%) sepia(27%) saturate(33%) hue-rotate(357deg) brightness(96%) contrast(82%)
+  font-size: 0.67em
+
 
 @media (min-width: 500px)
   .project
